--- a/index.html
+++ b/index.html
@@ -20,6 +20,26 @@
 
 
     <main class="container">
+        <section>
+            <h2>
+                добро пожаловать на шумерский проэкт <span>Имя судьбы</span>
+            </h2>
+
+            <p>
+                для того чтоб получить имя судьбы, из даты рождения вычисляем <span>число судьбы</span>
+            </p>
+
+            <p>
+                число судьбы это сумма всех чисел даты рождения, к примеру : <br>
+                дата рождения : 19.01.1990 <br>
+                1+9+0+1+1+9+9+0 = 30 --> 3+0 = 3 <br>
+                наше число судьбы = 3
+            </p>
+            <p>
+                первая буква нашего имени судьбы начинает с одной из букв под номером 3 из следующей таблици:
+            </p>
+        </section>
+
 
         <!-- TABLE -->
 
@@ -90,15 +110,41 @@
             </tbody>
         </table>
 
-        <span>
-            Первая буква это сумма всех чисел
-            Вторая буква день даты рождения
-            Третья буква месяц
-        </span>
+        <p>
+            тем самым ваше имя судьбы начинает с одной из букв : C / G / L / S
+        </p>
+        <p>дальше по дате рождения каждая буква от имени: 1-9-0-1-1-9-9-0
+        </p>
+        <ul>
+            <li> 3: C / G / L / S</li>
+            <li> 1: A / I / J / Q / Y</li>
+            <li> 9: - можно выбрать обсолютно любую букву из таблицы </li>
+            <li> 0: - можно выбрать обсолютно любую букву из таблицы</li>
+            <li> 1: A / I / J / Q / Y </li>
+            <li> 1: A / I / J / Q / Y</li>
+            <li> 9: - можно выбрать обсолютно любую букву из таблицы</li>
+            <li> 9: - можно выбрать обсолютно любую букву из таблицы</li>
+            <li> 0: - можно выбрать любую гласную букву из таблицы</li>
+        </ul>
+        <p>
+            в итоге получаем имя из 9 букв: к примеру Galojaspa
+        </p>
+        <section>
 
-        <span>
+            <h3>
+                Колькулятро Имени
+            </h3>
+            <p>наше следущее приложение поможет вам подобрать имея путём автоматических расчетов и предложение букв</p>
+            <form>
+                <div class="form-group">
+                    <label for="birthday_date">введите дату рождения</label>
+                    <input type="date" class="form-control" id="birthday_date" aria-describedby="birthday">
 
-        </span>
+                </div>
+
+                <button type="submit" class="btn btn-primary">начать вычесление</button>
+            </form>
+        </section>
     </main>
     </div>
 
