--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <main class="container">
         <section>
             <h2>
-                добро пожаловать на шумерский проэкт <span>Имя судьбы</span>
+                добро пожаловать на шумерский проект <span>Имя судьбы</span>
             </h2>
 
             <p>
@@ -30,13 +30,13 @@
             </p>
 
             <p>
-                число судьбы это сумма всех чисел даты рождения, к примеру : <br>
+                число судьбы - это сумма всех чисел даты рождения, к примеру : <br>
                 дата рождения : 19.01.1990 <br>
                 1+9+0+1+1+9+9+0 = 30 --> 3+0 = 3 <br>
                 наше число судьбы = 3
             </p>
             <p>
-                первая буква нашего имени судьбы начинает с одной из букв под номером 3 из следующей таблици:
+                первая буква нашего имени судьбы начинает с одной из букв под номером 3 из следующей таблицы:
             </p>
         </section>
 
@@ -111,19 +111,19 @@
         </table>
 
         <p>
-            тем самым ваше имя судьбы начинает с одной из букв : C / G / L / S
+            тем самым ваше имя судьбы начинается с одной из букв : C / G / L / S
         </p>
         <p>дальше по дате рождения каждая буква от имени: 1-9-0-1-1-9-9-0
         </p>
         <ul>
             <li> 3: C / G / L / S</li>
             <li> 1: A / I / J / Q / Y</li>
-            <li> 9: - можно выбрать обсолютно любую букву из таблицы </li>
-            <li> 0: - можно выбрать обсолютно любую букву из таблицы</li>
+            <li> 9: - можно выбрать абсолютно любую букву из таблицы </li>
+            <li> 0: - можно выбрать абсолютно любую букву из таблицы</li>
             <li> 1: A / I / J / Q / Y </li>
             <li> 1: A / I / J / Q / Y</li>
-            <li> 9: - можно выбрать обсолютно любую букву из таблицы</li>
-            <li> 9: - можно выбрать обсолютно любую букву из таблицы</li>
+            <li> 9: - можно выбрать абсолютно любую букву из таблицы</li>
+            <li> 9: - можно выбрать абсолютно любую букву из таблицы</li>
             <li> 0: - можно выбрать любую гласную букву из таблицы</li>
         </ul>
         <p>
@@ -132,9 +132,9 @@
         <section>
 
             <h3>
-                Колькулятро Имени
+                Калькулятор Имени
             </h3>
-            <p>наше следущее приложение поможет вам подобрать имея путём автоматических расчетов и предложение букв</p>
+            <p>наше следующее приложение поможет вам подобрать имя путём автоматических расчетов и предложение букв</p>
             <form>
                 <div class="form-group">
                     <label for="birthday_date">введите дату рождения</label>
@@ -142,7 +142,7 @@
 
                 </div>
 
-                <button type="submit" class="btn btn-primary">начать вычесление</button>
+                <button type="submit" class="btn btn-primary">начать вычисление</button>
             </form>
         </section>
     </main>
